--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
-  sphere: ^0.0.4
+  tuple: ^1.0.3
 
 dev_dependencies:
   flutter_test:
