--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   tuple: ^1.0.3
+  firebase_auth: ^0.18.1+2
+  firebase_core: ^0.5.0+1
+  firebase_database: ^4.1.1
+  splashscreen: 1.2.0
+  flutter_signin_button: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +31,7 @@ flutter:
   assets:
     - assets/images/world.svg
     - assets/images/world.png
+    - assets/images/logo.png
     #- images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
